Implement questions section of main

--- a/index.html
+++ b/index.html
@@ -325,14 +325,23 @@
 
             <section class="questions">
                 <article class="question-container medium-width">
-                    <h2>Questions</h2>
+                    <h2>Domande frequenti</h2>
                     <div>
                         <hr>
-                        <p>q1</p>
+                        <div class="row-quest flex-container">
+                            <p>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
+                            <i class="fa-solid fa-angle-down"></i>
+                        </div>
                         <hr>
-                        <p>q2</p>
+                        <div class="row-quest flex-container">
+                            <p>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
+                            <i class="fa-solid fa-angle-down"></i>
+                        </div>
                         <hr>
-                        <p>q3</p>
+                        <div class="row-quest flex-container">
+                            <p>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
+                            <i class="fa-solid fa-angle-down"></i>
+                        </div>
                         <hr>
                     </div>
                 </article>
