Implement footer sections

--- a/index.html
+++ b/index.html
@@ -353,18 +353,59 @@
                 <article class="footer-container flex-container medium-width">
                     <div class="tool-list">
                         <ul>
-
+                            <li><p class="title-list">Dropbox</p></li>
+                            <li>Applicazione desktop</li>
+                            <li>Perché Dropbox</li>
+                            <li>Piani</li>
+                            <li>Sicurezza</li>
+                            <li>Funzioni</li>
                         </ul>
                     </div>
-                    <div class="tool-list"></div>
-                    <div class="tool-list"></div>
-                    <div class="tool-list"></div>
-                    <div class="tool-list"></div>
+                    <div class="tool-list">
+                        <ul>
+                            <li><p class="title-list">Prodotti</p></li>
+                            <li>Applicazione desktop</li>
+                            <li>Perché Dropbox</li>
+                            <li>Piani</li>
+                            <li>Sicurezza</li>
+                            <li>Funzioni</li>
+                        </ul>
+                    </div>
+                    <div class="tool-list">
+                        <ul>
+                            <li><p class="title-list">Azienda</p></li>
+                            <li>Applicazione desktop</li>
+                            <li>Perché Dropbox</li>
+                            <li>Piani</li>
+                            <li>Sicurezza</li>
+                            <li>Funzioni</li>
+                        </ul>
+                    </div>
+                    <div class="tool-list">
+                        <ul>
+                            <li><p class="title-list">Supporto</p></li>
+                            <li>Applicazione desktop</li>
+                            <li>Perché Dropbox</li>
+                            <li>Piani</li>
+                            <li>Sicurezza</li>
+                            <li>Funzioni</li>
+                        </ul>
+                    </div>
+                    <div class="tool-list">
+                        <ul>
+                            <li><p class="title-list">Community</p></li>
+                            <li>Applicazione desktop</li>
+                            <li>Perché Dropbox</li>
+                            <li>Piani</li>
+                            <li>Sicurezza</li>
+                            <li>Funzioni</li>
+                        </ul>
+                    </div>
                 </article>
 
                 <article class="language medium-width">
                     <div class="row"></div>
-                    <div class="lang-ita">Italian</div>
+                    <div class="lang-ita"><i class="fa-solid fa-earth-americas"></i> Italiano <i class="fa-solid fa-caret-up"></i></div>
                 </article>
             </section>
 
