Fix html and css codes

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                     </ul>
                 </div>
             </nav>
+
             <section class="main-header">
                 <article class="container header-container">
                     <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
@@ -58,15 +59,15 @@
                 <article class="title-check">
                     <h2>Trova il piano business che fa per te</h2>
                     <div>
-                        <input type="radio" name="month">
+                        <input type="radio" name="selection">
                         <span>Fatturazione mensile</span>
                     </div>
                     <div>
-                        <input type="radio" name="year">
+                        <input type="radio" name="selection">
                         <span>Fatturazione annuale</span>
                     </div>
-                    <!-- Da modificare funzionamento e aspetto radio-box (aggiungere checked) -->
                 </article>
+
                 <article class="plan-cards flex-container">
                     <div class="card-plan">
                         <div class="plan-type"><i class="fa-solid fa-user"></i> Singolo</div>
@@ -408,7 +409,6 @@
                     <div class="lang-ita"><i class="fa-solid fa-earth-americas"></i> Italiano <i class="fa-solid fa-caret-up"></i></div>
                 </article>
             </section>
-
         </footer>
     </body>
 </html>
