Fix sections, buttons,logo and position jumbotron

--- a/index.html
+++ b/index.html
@@ -31,18 +31,18 @@
                         <li>Supporto</li>
                         <li>Contatta l'ufficio vendite</li>
                         <li>Accedi</li>
-                        <li><button class="blue-button">Inizia</button></li>
+                        <li><a href="#" class="blue-button">Inizia</a></li>
                     </ul>
                 </div>
             </nav>
 
             <section class="main-header">
-                <article class="container header-container">
+                <article class="container header-container p-relative">
                     <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
                     <div class="flex-container">
-                        <div class="description">
+                        <div class="description p-relative">
                             <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
-                            <button class="blue-button">Inizia la tua prova gratuita</button>
+                            <a href="#" class="blue-button">Inizia la tua prova gratuita</a>
                             <p>Annulla in qualsiasi momento</p>
                             <i class="fa-solid fa-arrow-down p-absolute"></i>
                         </div>
@@ -89,7 +89,7 @@
                                     <span>Funzioni di produttività premium e condivisione file semplice e sicura</span>
                                 </li>
                             </ul>
-                            <button class="blue-button trial-button " >Prova gratis per 30 giorni</button>
+                            <a href="#" class="blue-button trial-button ">Prova gratis per 30 giorni</a>
                             <p class="margin-card">oppure <a href="#">acquista ora</a></p>
                             <div class="small-divider"></div>
                             <h5 class="highlights">Punti Salienti del piano</h5>
@@ -126,7 +126,7 @@
                                     <span>Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team</span>
                                 </li>
                             </ul>
-                            <button class="blue-button trial-button " >Prova gratis per 30 giorni</button>
+                            <a href="#" class="blue-button trial-button ">Prova gratis per 30 giorni</a>
                             <p class="margin-card">oppure <a href="#">acquista ora</a></p>
                             <div class="small-divider"></div>
                             <h5 class="highlights">Punti Salienti del piano</h5>
@@ -175,7 +175,7 @@
                                     <span>Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala</span>
                                 </li>
                             </ul>
-                            <button id="contact-us" class="blue-button">Contattaci</button>
+                            <a href="#" class="blue-button trial-button ">Contattaci</a>
                             <p class="margin-card">oppure <a href="#">acquista ora</a></p>
                             <div class="small-divider"></div>
                             <h5 class="highlights">Punti Salienti del piano</h5>
@@ -206,7 +206,7 @@
                             <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.</p>
                         </div>
                         <div class="right-card">
-                            <button class="blue-button trial-button" >Contatta l'ufficio vendite</button>
+                            <a href="#" class="blue-button trial-button ">Contatta l'ufficio vendite</a>
                         </div>
                     </div>
                 </article>
@@ -219,7 +219,7 @@
                 <div class="partner-text">
                     <h3>Entra in contatto con un partner Dropbox</h3>
                     <p class="margin-card">Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui</p>
-                    <button>Trova un partner</button>
+                    <a href="#">Trova un partner</a>
                 </div>
             </section>
 
@@ -320,7 +320,7 @@
             <section class="free-trial">
                 <article id="trial" class="flex-container medium-width">
                     <div class="text-part"><h2>Porta Dropbox Business nella tua azienda.</h2></div>
-                    <div class="button-part"><button>Inizia la tua prova gratuita</button></div>
+                    <div class="button-part"><a href="#">Inizia la tua prova gratuita</a></div>
                 </article>
             </section>
 
