Create structure one drop-down menu of header nav

--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
             <nav class="flex-container">
                 <div class="flex-container">
                     <img id="logo-small" src="./img/logo-small.png" alt="dropbox logo-small">
-                    <ul>
-                        <li>Perchè Dropbox</li>
+                    <ul class="flex-container">
+                        <li class="p-relative gray-hov"><a href="#">Perchè Dropbox</a>
+                            <div class="drop-menu p-absolute" >Tendina</div>
+                        </li>
                         <li>Funzioni</li>
                         <li>Piani e prezzi</li>
                     </ul>
