--- a/index.html
+++ b/index.html
@@ -22,7 +22,26 @@
                     <img id="logo-small" src="./img/logo-small.png" alt="dropbox logo-small">
                     <ul class="flex-container">
                         <li class="p-relative gray-hov"><a href="#">Perchè Dropbox</a>
-                            <div class="drop-menu p-absolute" >Tendina</div>
+                            <div class="drop-menu p-absolute flex-container" >
+                                <div class="left-menu">
+                                    <ul>
+                                        <li></li>
+                                        <li></li>
+                                        <li></li>
+                                        <li></li>
+                                        <li></li>
+                                    </ul>
+                                </div>
+                                <div class="right-menu">
+                                    <ul>
+                                        <li></li>
+                                        <li></li>
+                                        <li></li>
+                                        <li></li>
+                                        <li></li>
+                                    </ul>
+                                </div>
+                            </div>
                         </li>
                         <li>Funzioni</li>
                         <li>Piani e prezzi</li>
@@ -52,11 +71,14 @@
                             <img src="./img/jumbo.png" alt="image example dropbox">
                         </div>
                     </div>
+                    <div class="layover"></div>
                 </article>
+                <div class="layover"></div>
             </section>
         </header>
 
         <main>
+            <div class="layover"></div>
             <section class="business-plans medium-width">
                 <article class="title-check">
                     <h2>Trova il piano business che fa per te</h2>
