--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
                     <img id="logo-small" src="./img/logo-small.png" alt="dropbox logo-small">
                     <ul class="flex-container">
                         <li class="p-relative gray-hov"><a href="#">Perchè Dropbox</a>
-                            <div class="layover"></div>
                             <div class="drop-menu p-absolute flex-container" >
                                 <div class="left-menu">
                                     <ul>
@@ -43,6 +42,7 @@
                                     </ul>
                                 </div>
                             </div>
+                            <div class="layover"><div class=" feature p-absolute"><p>Salve a lei, la informiamo gentilmente che codesto non è assolutamente un bug, ma al contrario, una feature, la preghiamo quindi di riportare il cursore sul nav per tornare alla pagina originale e proseguire la sua navigazione all'interno dell'accurata pagina</p></div></div>
                         </li>
                         <li>Funzioni</li>
                         <li>Piani e prezzi</li>
