Fix feature of layover

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="layover"><div class=" feature p-absolute"><p>Salve a lei, la informiamo gentilmente che codesto non è assolutamente un bug, ma al contrario, una feature, la preghiamo quindi di riportare il cursore sul nav per tornare alla pagina originale e proseguire la sua navigazione all'interno dell'accurata pagina</p></div></div>
+                            <div class="layover"><div class=" feature p-absolute"><p>Salve a lei, la informiamo gentilmente che codesto non è assolutamente un bug, ma al contrario, una feature, la preghiamo quindi di riportare il cursore sul nav per tornare alla pagina originale e proseguire la sua navigazione all'interno dell'accurata pagina.</p></div></div>
                         </li>
                         <li>Funzioni</li>
                         <li>Piani e prezzi</li>
