Add shorter drop-menu of the left part of nav

--- a/index.html
+++ b/index.html
@@ -44,8 +44,53 @@
                             </div>
                             <div class="layover"><div class=" feature p-absolute"><p>Salve a lei, la informiamo gentilmente che codesto non è assolutamente un bug, ma al contrario, una feature, la preghiamo quindi di riportare il cursore sul nav per tornare alla pagina originale e proseguire la sua navigazione all'interno dell'accurata pagina.</p></div></div>
                         </li>
-                        <li>Funzioni</li>
-                        <li>Piani e prezzi</li>
+                        <li class="p-relative gray-hov"><a href="#">Funzioni</a>
+                            <div class="drop-menu short-menu p-absolute flex-container" >
+                                <div class="left-menu">
+                                    <ul>
+                                        <li></li>
+                                        <li></li>
+                                        <li></li>
+                                        <li></li>
+                                        <li></li>
+                                    </ul>
+                                </div>
+                                <div class="right-menu">
+                                    <ul>
+                                        <li></li>
+                                        <li></li>
+                                        <li></li>
+                                        <li></li>
+                                        <li></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="layover"><div class=" feature p-absolute"><p>Salve a lei, la informiamo gentilmente che codesto non è assolutamente un bug, ma al contrario, una feature, la preghiamo quindi di riportare il cursore sul nav per tornare alla pagina originale e proseguire la sua navigazione all'interno dell'accurata pagina.</p></div></div>
+                        </li>
+                        <li class="p-relative gray-hov"><a href="#">Soluzioni</a>
+                            <div class="drop-menu short-menu p-absolute flex-container" >
+                                <div class="left-menu">
+                                    <ul>
+                                        <li></li>
+                                        <li></li>
+                                        <li></li>
+                                        <li></li>
+                                        <li></li>
+                                    </ul>
+                                </div>
+                                <div class="right-menu">
+                                    <ul>
+                                        <li></li>
+                                        <li></li>
+                                        <li></li>
+                                        <li></li>
+                                        <li></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="layover"><div class=" feature p-absolute"><p>Salve a lei, la informiamo gentilmente che codesto non è assolutamente un bug, ma al contrario, una feature, la preghiamo quindi di riportare il cursore sul nav per tornare alla pagina originale e proseguire la sua navigazione all'interno dell'accurata pagina.</p></div></div>
+                        </li>
+                        <li><a href="#">Piani e prezzi</a></li>
                     </ul>
                 </div>
                 <div>
