--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <nav class="flex-container">
                 <div class="flex-container">
                     <img id="logo-small" src="./img/logo-small.png" alt="dropbox logo-small">
-                    <ul class="flex-container">
+                    <ul class="flex-container left-nav">
                         <li class="p-relative gray-hov"><a href="#">Perchè Dropbox</a>
                             <div class="drop-menu p-absolute flex-container" >
                                 <div class="left-menu">
@@ -45,7 +45,7 @@
                             <div class="layover"><div class=" feature p-absolute"><p>Salve a lei, la informiamo gentilmente che codesto non è assolutamente un bug, ma al contrario, una feature, la preghiamo quindi di riportare il cursore sul nav per tornare alla pagina originale e proseguire la sua navigazione all'interno dell'accurata pagina.</p></div></div>
                         </li>
                         <li class="p-relative gray-hov"><a href="#">Funzioni</a>
-                            <div class="drop-menu short-menu p-absolute flex-container" >
+                            <div id="function-drop" class="drop-menu short-menu p-absolute flex-container" >
                                 <div class="left-menu">
                                     <ul>
                                         <li></li>
@@ -68,7 +68,7 @@
                             <div class="layover"><div class=" feature p-absolute"><p>Salve a lei, la informiamo gentilmente che codesto non è assolutamente un bug, ma al contrario, una feature, la preghiamo quindi di riportare il cursore sul nav per tornare alla pagina originale e proseguire la sua navigazione all'interno dell'accurata pagina.</p></div></div>
                         </li>
                         <li class="p-relative gray-hov"><a href="#">Soluzioni</a>
-                            <div class="drop-menu short-menu p-absolute flex-container" >
+                            <div id="solution-drop" class="drop-menu p-absolute flex-container" >
                                 <div class="left-menu">
                                     <ul>
                                         <li></li>
@@ -90,14 +90,50 @@
                             </div>
                             <div class="layover"><div class=" feature p-absolute"><p>Salve a lei, la informiamo gentilmente che codesto non è assolutamente un bug, ma al contrario, una feature, la preghiamo quindi di riportare il cursore sul nav per tornare alla pagina originale e proseguire la sua navigazione all'interno dell'accurata pagina.</p></div></div>
                         </li>
-                        <li><a href="#">Piani e prezzi</a></li>
+                        <li><a href="#">Piani e prezzi</a>
+                        </li>
                     </ul>
                 </div>
                 <div>
-                    <ul>
-                        <li>Supporto</li>
-                        <li>Contatta l'ufficio vendite</li>
-                        <li>Accedi</li>
+                    <ul class="right-nav">
+                        <li class="p-relative gray-hov right-nav"><a href="#">Supporto</a>
+                            <div class="drop-menu p-absolute flex-container" >
+                                <div class="left-menu">
+                                    <ul>
+                                        <li></li>
+                                        <li></li>
+                                        <li></li>
+                                        <li></li>
+                                        <li></li>
+                                    </ul>
+                                </div>
+                                <div class="right-menu">
+                                    <ul>
+                                        <li></li>
+                                        <li></li>
+                                        <li></li>
+                                        <li></li>
+                                        <li></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="layover"><div class=" feature p-absolute"><p>Salve a lei, la informiamo gentilmente che codesto non è assolutamente un bug, ma al contrario, una feature, la preghiamo quindi di riportare il cursore sul nav per tornare alla pagina originale e proseguire la sua navigazione all'interno dell'accurata pagina.</p></div></div>
+                        </li>
+                        <li class="p-relative gray-hov"><a href="#">Contatta l'ufficio vendite</a>
+                            <div class="drop-menu p-absolute flex-container" >
+                                <div class="one-menu">
+                                    <ul>
+                                        <li></li>
+                                        <li></li>
+                                        <li></li>
+                                        <li></li>
+                                        <li></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="layover"><div class=" feature p-absolute"><p>Salve a lei, la informiamo gentilmente che codesto non è assolutamente un bug, ma al contrario, una feature, la preghiamo quindi di riportare il cursore sul nav per tornare alla pagina originale e proseguire la sua navigazione all'interno dell'accurata pagina.</p></div></div>
+                        </li>
+                        <li class="p-relative gray-hov"><a href="#">Accedi</a></li>
                         <li><a href="#" class="blue-button">Inizia</a></li>
                     </ul>
                 </div>
