Create drop-menu structure of nav

--- a/index.html
+++ b/index.html
@@ -21,64 +21,50 @@
                 <div class="flex-container">
                     <img id="logo-small" src="./img/logo-small.png" alt="dropbox logo-small">
                     <ul class="flex-container left-nav">
-                        <li class="p-relative gray-hov"><a href="#">Perchè Dropbox</a>
-                            <div class="drop-menu p-absolute flex-container" >
-                                <div class="left-menu">
-                                    <ul>
-                                        <li></li>
-                                        <li></li>
-                                        <li></li>
-                                        <li></li>
-                                        <li></li>
-                                    </ul>
-                                </div>
-                                <div class="right-menu">
-                                    <ul>
-                                        <li></li>
-                                        <li></li>
-                                        <li></li>
-                                        <li></li>
-                                        <li></li>
-                                    </ul>
+                        <li class="p-relative gray-hov nav-item"><a href="#">Perchè Dropbox</a>
+                            <div class="drop-menu p-absolute" >
+                                <div class="menu-container flex-container">
+                                    <div class="left-menu">
+                                        <ul>
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                        </ul>
+                                    </div>
+                                    <div class="right-menu">
+                                        <ul>
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
                             <div class="layover"><div class=" feature p-absolute"><p>Salve a lei, la informiamo gentilmente che codesto non è assolutamente un bug, ma al contrario, una feature, la preghiamo quindi di riportare il cursore sul nav per tornare alla pagina originale e proseguire la sua navigazione all'interno dell'accurata pagina.</p></div></div>
                         </li>
-                        <li class="p-relative gray-hov"><a href="#">Funzioni</a>
+                        <li class="p-relative gray-hov nav-item"><a href="#">Funzioni</a>
                             <div id="function-drop" class="drop-menu short-menu p-absolute flex-container" >
-                                <div class="left-menu">
-                                    <ul>
-                                        <li></li>
-                                        <li></li>
-                                        <li></li>
-                                        <li></li>
-                                        <li></li>
-                                    </ul>
-                                </div>
-                                <div class="right-menu">
-                                    <ul>
-                                        <li></li>
-                                        <li></li>
-                                        <li></li>
-                                        <li></li>
-                                        <li></li>
-                                    </ul>
+                                <div class="menu-container flex-container">
+                                    <div class="one-menu">
+                                        <ul>
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
                             <div class="layover"><div class=" feature p-absolute"><p>Salve a lei, la informiamo gentilmente che codesto non è assolutamente un bug, ma al contrario, una feature, la preghiamo quindi di riportare il cursore sul nav per tornare alla pagina originale e proseguire la sua navigazione all'interno dell'accurata pagina.</p></div></div>
                         </li>
-                        <li class="p-relative gray-hov"><a href="#">Soluzioni</a>
+                        <li class="p-relative gray-hov nav-item"><a href="#">Soluzioni</a>
                             <div id="solution-drop" class="drop-menu p-absolute flex-container" >
-                                <div class="left-menu">
-                                    <ul>
-                                        <li></li>
-                                        <li></li>
-                                        <li></li>
-                                        <li></li>
-                                        <li></li>
-                                    </ul>
-                                </div>
-                                <div class="right-menu">
+                                <div class="one-menu">
                                     <ul>
                                         <li></li>
                                         <li></li>
@@ -90,36 +76,38 @@
                             </div>
                             <div class="layover"><div class=" feature p-absolute"><p>Salve a lei, la informiamo gentilmente che codesto non è assolutamente un bug, ma al contrario, una feature, la preghiamo quindi di riportare il cursore sul nav per tornare alla pagina originale e proseguire la sua navigazione all'interno dell'accurata pagina.</p></div></div>
                         </li>
-                        <li class="gray-hov"><a href="#">Piani e prezzi</a>
+                        <li class="gray-hov nav-item"><a href="#">Piani e prezzi</a>
                         </li>
                     </ul>
                 </div>
                 <div>
                     <ul class="right-nav">
-                        <li class="p-relative gray-hov right-nav"><a href="#">Supporto</a>
+                        <li class="p-relative gray-hov nav-item right-nav"><a href="#">Supporto</a>
                             <div class="drop-menu p-absolute flex-container" >
-                                <div class="left-menu">
-                                    <ul>
-                                        <li></li>
-                                        <li></li>
-                                        <li></li>
-                                        <li></li>
-                                        <li></li>
-                                    </ul>
-                                </div>
-                                <div class="right-menu">
-                                    <ul>
-                                        <li></li>
-                                        <li></li>
-                                        <li></li>
-                                        <li></li>
-                                        <li></li>
-                                    </ul>
+                                <div class="menu-container flex-container">
+                                    <div class="left-menu">
+                                        <ul>
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                        </ul>
+                                    </div>
+                                    <div class="right-menu">
+                                        <ul>
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
                             <div class="layover"><div class=" feature p-absolute"><p>Salve a lei, la informiamo gentilmente che codesto non è assolutamente un bug, ma al contrario, una feature, la preghiamo quindi di riportare il cursore sul nav per tornare alla pagina originale e proseguire la sua navigazione all'interno dell'accurata pagina.</p></div></div>
                         </li>
-                        <li class="p-relative gray-hov"><a href="#">Contatta l'ufficio vendite</a>
+                        <li class="p-relative gray-hov nav-item"><a href="#">Contatta l'ufficio vendite</a>
                             <div class="drop-menu p-absolute flex-container" >
                                 <div class="one-menu">
                                     <ul>
@@ -133,8 +121,8 @@
                             </div>
                             <div class="layover"><div class=" feature p-absolute"><p>Salve a lei, la informiamo gentilmente che codesto non è assolutamente un bug, ma al contrario, una feature, la preghiamo quindi di riportare il cursore sul nav per tornare alla pagina originale e proseguire la sua navigazione all'interno dell'accurata pagina.</p></div></div>
                         </li>
-                        <li class="p-relative gray-hov"><a href="#">Accedi</a></li>
-                        <li><a href="#" class="blue-button">Inizia</a></li>
+                        <li class="p-relative gray-hov nav-item"><a href="#">Accedi</a></li>
+                        <li class="nav-item"><a href="#" class="blue-button">Inizia</a></li>
                     </ul>
                 </div>
             </nav>
