Implement one drop-menu of nav

--- a/index.html
+++ b/index.html
@@ -26,20 +26,25 @@
                                 <div class="menu-container flex-container">
                                     <div class="left-menu">
                                         <ul>
-                                            <li></li>
-                                            <li></li>
-                                            <li></li>
-                                            <li></li>
-                                            <li></li>
+                                            <li class="ul-title">Panoramica</li>
+                                            <li>Ispirati</li>
+                                            <li>Cosa dicono i clienti</li>
+                                            <li>Integrazioni di app</li>
+                                            <li>Risorse</li>
                                         </ul>
                                     </div>
                                     <div class="right-menu">
                                         <ul>
-                                            <li></li>
-                                            <li></li>
-                                            <li></li>
-                                            <li></li>
-                                            <li></li>
+                                            <li class="ul-title">Lavora al meglio con Dropbox</li>
+                                            <li>Condividi file</li>
+                                            <li>Archivia e organizza</li>
+                                            <li>Sincronizza i tuoi dispositivi</li>
+                                            <li>Proteggi i tuoi dati</li>
+                                            <li>Connetti tra loro i membri del team in remoto</li>
+                                            <li>Fai avanzare il tuo lavoro</li>
+                                            <li>Backup sempre attivo</li>
+                                            <li>Firma un documento</li>
+                                            <li>Monitora i dati analitici dei documenti</li>
                                         </ul>
                                     </div>
                                 </div>
