Implement function drop-menu of nav

--- a/index.html
+++ b/index.html
@@ -56,11 +56,27 @@
                                 <div class="menu-container flex-container">
                                     <div class="one-menu">
                                         <ul>
-                                            <li></li>
-                                            <li></li>
-                                            <li></li>
-                                            <li></li>
-                                            <li></li>
+                                            <li class="ul-title"> Non limitarti all'archiviazione di file con Dropbox</li>
+                                            <li class="flex-container">
+                                                <i class="fa-brands fa-dropbox drop-icon"></i>
+                                                <span><h4>Dropbox</h4>Archivia, condividi e accedi ai file su tutti i dispositivi</span>
+                                            </li>
+                                            <li class="flex-container">
+                                                <i class="fa-solid fa-spinner drop-icon"></i>
+                                                <span><h4>Backup</h4>Esegui il backup automatico dei tuoi dispositivi</span>
+                                            </li>
+                                            <li class="flex-container">
+                                                <i class="fa-solid fa-file-signature drop-icon"></i>
+                                                <span><h4>Dropbox Sign</h4>Richiedi e aggiungi firme ai documenti</span>
+                                            </li>
+                                            <li class="flex-container">
+                                                <i class="fa-solid fa-file-import drop-icon"></i>
+                                                <span><h4>DocSend</h4>Invia documenti in modo sicuro e tieni traccia delle attività</span>
+                                            </li>
+                                            <li class="flex-container">
+                                                <i class="fa-solid fa-arrow-right drop-icon"></i>
+                                                <span><h4>Accesso anticipato</h4>Scopri in anteprima le nuove esperienze del prodotto</span>
+                                            </li>
                                         </ul>
                                     </div>
                                 </div>
