Add hover effect on menu-drop-item

--- a/index.html
+++ b/index.html
@@ -27,24 +27,24 @@
                                     <div class="left-menu">
                                         <ul>
                                             <li class="ul-title">Panoramica</li>
-                                            <li>Ispirati</li>
-                                            <li>Cosa dicono i clienti</li>
-                                            <li>Integrazioni di app</li>
-                                            <li>Risorse</li>
+                                            <li class="menu-item"><a href="#"> Ispirati</a></li>
+                                            <li class="menu-item"><a href="">Cosa dicono i clienti</a></li>
+                                            <li class="menu-item"><a href="">Integrazioni di app</a></li>
+                                            <li class="menu-item"><a href="">Risorse</a></li>
                                         </ul>
                                     </div>
                                     <div class="right-menu">
                                         <ul>
                                             <li class="ul-title">Lavora al meglio con Dropbox</li>
-                                            <li>Condividi file</li>
-                                            <li>Archivia e organizza</li>
-                                            <li>Sincronizza i tuoi dispositivi</li>
-                                            <li>Proteggi i tuoi dati</li>
-                                            <li>Connetti tra loro i membri del team in remoto</li>
-                                            <li>Fai avanzare il tuo lavoro</li>
-                                            <li>Backup sempre attivo</li>
-                                            <li>Firma un documento</li>
-                                            <li>Monitora i dati analitici dei documenti</li>
+                                            <li class="menu-item"><a href="#">Condividi file</a></li>
+                                            <li class="menu-item"><a href="#">Archivia e organizza</a></li>
+                                            <li class="menu-item"><a href="#">Sincronizza i tuoi dispositivi</a></li>
+                                            <li class="menu-item"><a href="#">Proteggi i tuoi dati</a></li>
+                                            <li class="menu-item"><a href="#">Connetti tra loro i membri del team in remoto</a></li>
+                                            <li class="menu-item"><a href="#">Fai avanzare il tuo lavoro</a></li>
+                                            <li class="menu-item"><a href="#">Backup sempre attivo</a></li>
+                                            <li class="menu-item"><a href="#">Firma un documento</a></li>
+                                            <li class="menu-item"><a href="#">Monitora i dati analitici dei documenti</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -57,23 +57,23 @@
                                     <div class="one-menu">
                                         <ul>
                                             <li class="ul-title"> Non limitarti all'archiviazione di file con Dropbox</li>
-                                            <li class="flex-container">
+                                            <li class="flex-container menu-item">
                                                 <i class="fa-brands fa-dropbox drop-icon"></i>
                                                 <span><h4>Dropbox</h4>Archivia, condividi e accedi ai file su tutti i dispositivi</span>
                                             </li>
-                                            <li class="flex-container">
+                                            <li class="flex-container menu-item">
                                                 <i class="fa-solid fa-spinner drop-icon"></i>
                                                 <span><h4>Backup</h4>Esegui il backup automatico dei tuoi dispositivi</span>
                                             </li>
-                                            <li class="flex-container">
+                                            <li class="flex-container menu-item">
                                                 <i class="fa-solid fa-file-signature drop-icon"></i>
                                                 <span><h4>Dropbox Sign</h4>Richiedi e aggiungi firme ai documenti</span>
                                             </li>
-                                            <li class="flex-container">
+                                            <li class="flex-container menu-item">
                                                 <i class="fa-solid fa-file-import drop-icon"></i>
                                                 <span><h4>DocSend</h4>Invia documenti in modo sicuro e tieni traccia delle attività</span>
                                             </li>
-                                            <li class="flex-container">
+                                            <li class="flex-container menu-item">
                                                 <i class="fa-solid fa-arrow-right drop-icon"></i>
                                                 <span><h4>Accesso anticipato</h4>Scopri in anteprima le nuove esperienze del prodotto</span>
                                             </li>
