--- a/index.html
+++ b/index.html
@@ -87,11 +87,13 @@
                             <div id="solution-drop" class="drop-menu p-absolute flex-container" >
                                 <div class="one-menu">
                                     <ul>
-                                        <li></li>
-                                        <li></li>
-                                        <li></li>
-                                        <li></li>
-                                        <li></li>
+                                        <li class="menu-item"><a href="">Creativi</a></li>
+                                        <li class="menu-item"><a href="">Vendite</a></li>
+                                        <li class="menu-item"><a href="">Marketing</a></li>
+                                        <li class="menu-item"><a href="#">Risorse umane</a></li>
+                                        <li class="menu-item"><a href="">IT</a></li>
+                                        <li class="menu-item"><a href="">Team lead</a></li>
+                                        <li class="menu-item"><a href="">Personale</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -104,24 +106,12 @@
                 <div>
                     <ul class="right-nav">
                         <li class="p-relative gray-hov nav-item right-nav"><a href="#">Supporto</a>
-                            <div class="drop-menu p-absolute flex-container" >
+                            <div class="drop-menu p-absolute flex-container" id="support-drop">
                                 <div class="menu-container flex-container">
-                                    <div class="left-menu">
+                                    <div class="one-menu">
                                         <ul>
-                                            <li></li>
-                                            <li></li>
-                                            <li></li>
-                                            <li></li>
-                                            <li></li>
-                                        </ul>
-                                    </div>
-                                    <div class="right-menu">
-                                        <ul>
-                                            <li></li>
-                                            <li></li>
-                                            <li></li>
-                                            <li></li>
-                                            <li></li>
+                                            <li class="menu-item"><a href="">App Desktop</a></li>
+                                            <li class="menu-item"><a href="">App per dispositivi mobili</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -130,14 +120,22 @@
                         </li>
                         <li class="p-relative gray-hov nav-item"><a href="#">Contatta l'ufficio vendite</a>
                             <div class="drop-menu p-absolute flex-container" >
-                                <div class="one-menu">
-                                    <ul>
-                                        <li></li>
-                                        <li></li>
-                                        <li></li>
-                                        <li></li>
-                                        <li></li>
-                                    </ul>
+                                <div class="menu-container flex-container">
+                                    <div class="left-menu">
+                                        <ul>
+                                            <li class="ul-title">Supporto</li>
+                                            <li class="menu-item"><a href="#">Centro assistenza</a></li>
+                                            <li class="menu-item"><a href="">Forum della community</a></li>
+                                        </ul>
+                                    </div>
+                                    <div class="right-menu">
+                                        <ul>
+                                            <li class="ul-title">Contatta l'ufficio vendite</li>
+                                            <li class="menu-item"><a href="#">Invia email</a></li>
+                                            <li class="menu-item"><a href="#">Chat</a></li>
+                                            <li class="menu-item"><a href="#">+39 0299953412</a></li>
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
                             <div class="layover"><div class=" feature p-absolute"><p>Salve a lei, la informiamo gentilmente che codesto non è assolutamente un bug, ma al contrario, una feature, la preghiamo quindi di riportare il cursore sul nav per tornare alla pagina originale e proseguire la sua navigazione all'interno dell'accurata pagina.</p></div></div>
